--- a/package.json
+++ b/package.json
@@ -34,5 +34,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://[your-github-username].github.io/lemonsquiz"
+  "homepage": "https://landenta.github.io/lemonsquiz"
 }
